backEnd/logs/app1-err.log
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
D:\大四下学期\bishe\backEnd\routes\front\users.js:181
                  userId:,
                         ^

SyntaxError: Unexpected token ,
    at new Script (vm.js:80:7)
    at createScript (vm.js:264:10)
    at Object.runInThisContext (vm.js:316:10)
    at Module._compile (internal/modules/cjs/loader.js:670:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:718:10)
    at Module.load (internal/modules/cjs/loader.js:605:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:544:12)
    at Function.Module._load (internal/modules/cjs/loader.js:536:3)
    at Function._load (C:\Users\dell-dx\AppData\Roaming\nvm\v11.0.0\node_modules\pm2\node_modules\@pm2\io\build\main\metrics\httpMetrics.js:172:43)
    at Module.require (internal/modules/cjs/loader.js:643:17)
